--- a/styles/present.css
+++ b/styles/present.css
@@ -12,7 +12,7 @@
 
 main{
     width: 100vw;
-    height: 120vh;
+    height: fit-content;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -24,7 +24,7 @@ div{
     gap: .5rem;
     background-color: #eae2e2;
     padding: 1rem 2rem;
-    margin: 1rem 2rem;
+    margin: 2rem;
     border: none;
     border-radius: 1rem;
     box-shadow: 1px 1px 5px #868383;
@@ -46,7 +46,7 @@ h2{
     align-self: end;
 }
 
-@media only screen and (min-width: 375px) {
+@media only screen and (min-width: 768px) {
     main{
         height: 100vh;
     }
